--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "env": "^0.0.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "swiper": "^8.4.5",
+    "swr": "^2.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
